java script practice

--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
 </head>
 <body>
   <h1>JavaScript Testing Page</h1>
+  <button type="submit" onclick="alert('wassup')">Submit</button>
+
+  <script>
+    document.write(document.bgcolor);
+  </script>
 </body>
 </html>
